// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeNode Props className 1`] = `
<div
  class="rc-tree-list rc-tree"
  role="tree"
>
  <div>
    <div
      class="rc-tree-list-holder-inner"
      style="display:flex;flex-direction:column"
    >
      <div
        class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-start"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="tree-node-cls rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-start"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="rc-tree-indent"
        >
          <span
            class="rc-tree-indent-unit"
            style="display:inline-block;padding-left:18px;user-select:none"
          />
        </span>
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-start rc-tree-treenode-end"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="rc-tree-indent"
        >
          <span
            class="rc-tree-indent-unit"
            style="display:inline-block;padding-left:18px;user-select:none"
          />
          <span
            class="rc-tree-indent-unit"
            style="display:inline-block;padding-left:18px;user-select:none"
          />
        </span>
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-end"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="rc-tree-indent"
        >
          <span
            class="rc-tree-indent-unit"
            style="display:inline-block;padding-left:18px;user-select:none"
          />
        </span>
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-end"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeNode Props customize icon component 1`] = `
<div
  class="rc-tree-list rc-tree"
  role="tree"
>
  <div>
    <div
      class="rc-tree-list-holder-inner"
      style="display:flex;flex-direction:column"
    >
      <div
        class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-start rc-tree-treenode-end"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__customize"
          >
            <span
              class="cust-icon"
            />
          </span>
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeNode Props customize icon element 1`] = `
<div
  class="rc-tree-list rc-tree"
  role="tree"
>
  <div>
    <div
      class="rc-tree-list-holder-inner"
      style="display:flex;flex-direction:column"
    >
      <div
        class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-start rc-tree-treenode-end"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__customize"
          >
            <span
              class="cust-icon"
            />
          </span>
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeNode Props customize icon hide icon 1`] = `
<div
  class="rc-tree-list rc-tree"
  role="tree"
>
  <div>
    <div
      class="rc-tree-list-holder-inner"
      style="display:flex;flex-direction:column"
    >
      <div
        class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-start rc-tree-treenode-end"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeNode Props data and aria props renders aria attributes on li 1`] = `
<div
  class="rc-tree-list rc-tree"
  role="tree"
>
  <div>
    <div
      class="rc-tree-list-holder-inner"
      style="display:flex;flex-direction:column"
    >
      <div
        aria-label="0-0"
        class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-start"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        aria-label="0-0-0"
        class="tree-node-cls rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-start"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="rc-tree-indent"
        >
          <span
            class="rc-tree-indent-unit"
            style="display:inline-block;padding-left:18px;user-select:none"
          />
        </span>
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        aria-label="0-0-0-0"
        class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-start rc-tree-treenode-end"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="rc-tree-indent"
        >
          <span
            class="rc-tree-indent-unit"
            style="display:inline-block;padding-left:18px;user-select:none"
          />
          <span
            class="rc-tree-indent-unit"
            style="display:inline-block;padding-left:18px;user-select:none"
          />
        </span>
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        aria-label="0-0-1"
        class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-end"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="rc-tree-indent"
        >
          <span
            class="rc-tree-indent-unit"
            style="display:inline-block;padding-left:18px;user-select:none"
          />
        </span>
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        aria-label="0-1"
        class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-end"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeNode Props data and aria props renders data attributes on li 1`] = `
<div
  class="rc-tree-list rc-tree"
  role="tree"
>
  <div>
    <div
      class="rc-tree-list-holder-inner"
      style="display:flex;flex-direction:column"
    >
      <div
        class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-start"
        data-test="0-0"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="tree-node-cls rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-start"
        data-test="0-0-0"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="rc-tree-indent"
        >
          <span
            class="rc-tree-indent-unit"
            style="display:inline-block;padding-left:18px;user-select:none"
          />
        </span>
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-start rc-tree-treenode-end"
        data-test="0-0-0-0"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="rc-tree-indent"
        >
          <span
            class="rc-tree-indent-unit"
            style="display:inline-block;padding-left:18px;user-select:none"
          />
          <span
            class="rc-tree-indent-unit"
            style="display:inline-block;padding-left:18px;user-select:none"
          />
        </span>
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-end"
        data-test="0-0-1"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="rc-tree-indent"
        >
          <span
            class="rc-tree-indent-unit"
            style="display:inline-block;padding-left:18px;user-select:none"
          />
        </span>
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-end"
        data-test="0-1"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeNode Props isLeaf 1`] = `
<div
  class="rc-tree-list rc-tree"
  role="tree"
>
  <div>
    <div
      class="rc-tree-list-holder-inner"
      style="display:flex;flex-direction:column"
    >
      <div
        class="rc-tree-treenode rc-tree-treenode-start rc-tree-treenode-end"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode rc-tree-treenode-start rc-tree-treenode-end"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="rc-tree-indent"
        >
          <span
            class="rc-tree-indent-unit"
            style="display:inline-block;padding-left:18px;user-select:none"
          />
        </span>
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeNode Props isLeaf 2`] = `
<div
  class="rc-tree-list rc-tree"
  role="tree"
>
  <div>
    <div
      class="rc-tree-list-holder-inner"
      style="display:flex;flex-direction:column"
    >
      <div
        class="rc-tree-treenode rc-tree-treenode-start rc-tree-treenode-end"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode rc-tree-treenode-start rc-tree-treenode-end"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="rc-tree-indent"
        >
          <span
            class="rc-tree-indent-unit"
            style="display:inline-block;padding-left:18px;user-select:none"
          />
        </span>
        <span
          class="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TreeNode Props isLeaf 3`] = `
<div
  class="rc-tree-list rc-tree"
  role="tree"
>
  <div>
    <div
      class="rc-tree-list-holder-inner"
      style="display:flex;flex-direction:column"
    >
      <div
        class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-start rc-tree-treenode-end"
        role="treeitem"
        tabindex="0"
      >
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
      <div
        class="rc-tree-treenode rc-tree-treenode-switcher-open rc-tree-treenode-start rc-tree-treenode-end"
        role="treeitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
          class="rc-tree-indent"
        >
          <span
            class="rc-tree-indent-unit"
            style="display:inline-block;padding-left:18px;user-select:none"
          />
        </span>
        <span
          class="rc-tree-switcher rc-tree-switcher_open"
        />
        <span
          class="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          title="---"
        >
          <span
            class="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            class="rc-tree-title"
          >
            ---
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
